fixed single word stretching quote box

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -63,6 +63,11 @@ body {
 .columns {
     display: flex;
     flex-direction: column;
+
+}
+
+.columns p {
+    word-break: break-word;
 }
 
 .prevQuoteText {
